# volsurf

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
benches/: surface_construction.rs  vol_query.rs
examples/: basic_surface.rs  calibration_config.rs  dividend_yield.rs  essvi_slice.rs  essvi_surface.rs  implied_vol.rs  local_vol.rs  sabr_smile.rs  smile_models.rs  ssvi_surface.rs  warmstart_fallback.rs
python/: Cargo.toml  pyproject.toml
python/src/: error.rs  implied.rs  lib.rs  local_vol.rs  smile.rs  surface.rs  types.rs
python/tests/: conftest.py  test_calibration_config.py  test_error_paths.py  test_essvi_accessors.py  test_implied.py  test_numpy.py  test_opaque_smile.py  test_repr.py  test_serde.py  test_smile.py  test_surface.py
src/: calibration.rs  conventions.rs  error.rs  lib.rs  optim.rs  types.rs  validate.rs
src/implied/: black.rs  displaced.rs  mod.rs  normal.rs
src/local_vol/: dupire.rs  mod.rs
src/smile/: arbitrage.rs  mod.rs  sabr.rs  spline.rs  svi.rs
src/surface/: arbitrage.rs  builder.rs  essvi.rs  interp.rs  mod.rs  piecewise.rs  ssvi.rs
tests/: dupire_integration.rs  hendriks_martini_2019.rs  integration.rs  property_tests.rs  svi_robustness.rs
tests/fixtures/svi_failures/: jan13_feb21_39dte.json  jan24_feb21_28dte_stable.json  mar03_apr17_45dte.json  mar10_apr17_38dte.json
wasm/: Cargo.toml  README.md
wasm/src/: arbitrage.rs  builder.rs  error.rs  implied.rs  lib.rs  local_vol.rs  smile.rs  surface.rs  types.rs
wasm/tests/: smoke.rs
