[package]
name = "volsurf"
version = "0.4.0"
edition = "2024"
license = "Apache-2.0"
description = "Production-ready volatility surface library for derivatives pricing"
keywords = ["volatility", "finance", "quant", "options", "derivatives"]
categories = ["mathematics", "finance"]
repository = "https://github.com/volsurf-rs/volsurf"
homepage = "https://volsurf-rs.github.io"
documentation = "https://docs.rs/volsurf"
readme = "README.md"

[features]
default = []
logging = ["dep:tracing"]
parallel = ["dep:rayon"]

[dependencies]
implied-vol = "2.0"
nalgebra = "0.34"
rayon = { version = "1.11", optional = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1.6"
serde_json = "1.0"

[[bench]]
name = "vol_query"
harness = false

[[bench]]
name = "surface_construction"
harness = false
