[package]
name = "volsurf-wasm"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "WebAssembly bindings for volsurf"
repository = "https://github.com/volsurf-rs/volsurf"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
volsurf = { path = ".." }
serde_json = "1.0"
wasm-bindgen = "0.2"
